# awssdkdynamo

./: Cargo.toml
src/: main.rs
